# macro-crypto-correlator

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: analysis.py  data_collection.py
tests/: test_analysis.py  test_cli.py  test_data_collection.py
